--- a/css/main.css
+++ b/css/main.css
@@ -43,7 +43,8 @@ button {
   }
 }
 
-h1 {
+h1,
+h2 {
   font-size: 4.4rem;
   line-height: 110.2%;
   color: #fff;
@@ -143,7 +144,7 @@ header {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  z-index: 2;
+  z-index: 99;
 }
 header .container {
   display: -webkit-box;
@@ -196,9 +197,20 @@ header .left-container nav ul li a {
 }
 header .left-container nav ul li a img {
   margin-left: 1.3rem;
+  -webkit-transition: -webkit-transform 0.3s;
+  transition: -webkit-transform 0.3s;
+  transition: transform 0.3s;
+  transition: transform 0.3s, -webkit-transform 0.3s;
 }
 header .left-container nav ul li a span {
   padding-left: 3.4rem;
+}
+header .left-container nav ul li a.active span {
+  color: #00aeff;
+}
+header .left-container nav ul li a.active img {
+  -webkit-transform: rotate(180deg);
+  transform: rotate(180deg);
 }
 header .right-container {
   display: -webkit-box;
@@ -214,7 +226,163 @@ header .right-container .btn:not(:first-child) {
 header .right-container .btn:not(:first-child) img {
   padding-right: 1rem;
 }
+header .btn-menu {
+  display: none;
+}
+header .btn-menu img {
+  width: 2.8rem;
+  height: 1.8rem;
+}
+@media (max-width: 991px) {
+  header .container .right-container {
+    width: 100%;
+    -webkit-box-pack: end;
+    -ms-flex-pack: end;
+    justify-content: flex-end;
+    margin-right: 8.9rem;
+  }
+  header .container .left-container nav {
+    display: none;
+  }
+  header .container .btn-menu {
+    display: block;
+  }
+}
+@media (max-width: 600px) {
+  header .container .right-container {
+    display: none;
+  }
+}
 
+.menu {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 4;
+  background: -webkit-gradient(linear, left top, left bottom, from(#020203), color-stop(96.35%, rgba(14, 17, 23, 0.92)), to(rgba(14, 17, 23, 0.9)));
+  background: linear-gradient(180deg, #020203 0%, rgba(14, 17, 23, 0.92) 96.35%, rgba(14, 17, 23, 0.9) 100%);
+  -webkit-backdrop-filter: blur(12px);
+  backdrop-filter: blur(12px);
+  -webkit-filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  -webkit-backdrop-filter: blur(54px);
+  backdrop-filter: blur(54px);
+  width: 100%;
+  padding-top: 9.6rem;
+  opacity: 0;
+  -webkit-transform: translateY(-100%);
+  transform: translateY(-100%);
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+  pointer-events: none;
+}
+.menu.active {
+  opacity: 1;
+  -webkit-transform: translateY(0%);
+  transform: translateY(0%);
+  pointer-events: all;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+.menu.esportes .area-menu .container {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-gap: 2.8rem 3.2rem;
+}
+.menu.esportes .area-menu .container li a {
+  width: 17.4rem;
+  height: 23.7rem;
+}
+.menu.esportes .area-menu .container li a .icon {
+  width: 17.4rem;
+  height: 17.9rem;
+}
+.menu.esportes .footer-menu ul {
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+}
+.menu .area-menu {
+  padding-top: 3.8rem;
+  padding-bottom: 5.8rem;
+}
+.menu .area-menu .container {
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  grid-gap: 2.8rem 3.2rem;
+}
+.menu .area-menu .container ul li a {
+  width: 17.6rem;
+  height: 17.6rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+}
+.menu .area-menu .container ul li a .icon {
+  width: 6.9rem;
+  height: 6.4rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  margin-bottom: 8.6px;
+}
+.menu .area-menu .container ul li a span {
+  display: block;
+  text-align: center;
+  font-family: "Inter";
+  line-height: 120%;
+  color: #828792;
+}
+.menu .footer-menu {
+  background: rgba(21, 23, 27, 0.719);
+  width: 100%;
+  height: 7rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+}
+.menu .footer-menu ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 83.2rem;
+  gap: 6.4rem;
+}
+.menu .footer-menu ul li a {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.menu .footer-menu ul li a .icon {
+  margin-right: 1rem;
+}
+
+.s-hero {
+  position: relative;
+  z-index: 2;
+}
 .s-hero .slide-principal {
   width: 100%;
   height: 73.6rem;
@@ -224,6 +392,14 @@ header .right-container .btn:not(:first-child) img {
 }
 .s-hero .slide-principal .swiper-wrapper .swiper-slide.slide-01 {
   background: url("../assets/banner-slide-01.jpg") no-repeat center center;
+}
+.s-hero .slide-principal .swiper-wrapper .swiper-slide.slide-02 {
+  background: url("../assets/banner-slide-02.jpg") no-repeat center center;
+  background-size: cover;
+}
+.s-hero .slide-principal .swiper-wrapper .swiper-slide.slide-03 {
+  background: url("../assets/banner-slide-03.jpg") no-repeat center center;
+  background-size: cover;
 }
 .s-hero .slide-principal .swiper-wrapper .swiper-slide .container {
   display: -webkit-box;
@@ -345,4 +521,487 @@ header .right-container .btn:not(:first-child) img {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
+}
+.s-hero .slide-thumbnail {
+  position: absolute;
+  top: 21rem;
+  left: 3rem;
+  z-index: 2;
+  height: 32rem;
+}
+.s-hero .slide-thumbnail .swiper-wrapper .swiper-slide {
+  max-width: 4.8rem;
+  height: 4.8rem;
+  cursor: pointer;
+  opacity: 0.4;
+  -webkit-filter: grayscale(100%);
+  filter: grayscale(100%);
+}
+.s-hero .slide-thumbnail .swiper-wrapper .swiper-slide.disable {
+  pointer-events: none;
+}
+.s-hero .slide-thumbnail .swiper-wrapper .swiper-slide.swiper-slide-thumb-active {
+  opacity: 1;
+  -webkit-filter: grayscale(0%);
+  filter: grayscale(0%);
+}
+@media (max-width: 991px) {
+  .s-hero .slide-principal .swiper-wrapper .swiper-slide .left-content {
+    margin-left: 13.8rem;
+  }
+}
+.s-games {
+  margin-bottom: 10.7rem;
+}
+.s-games .top {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  margin-top: 8.9rem;
+  margin-bottom: 8.8rem;
+}
+.s-games .top .left-top {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+  -ms-flex-align: start;
+  align-items: flex-start;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  width: 100%;
+  max-width: 39.9rem;
+}
+.s-games .top .left-top span {
+  font-weight: 600;
+  font-size: 1.5rem;
+  line-height: 2.2rem;
+  color: #8f9199;
+  margin-top: 1.1rem;
+}
+.s-games .top .left-top h2 {
+  font-weight: 700;
+  font-size: 3.2rem;
+  line-height: 110.2%;
+  color: #ffffff;
+  width: 100%;
+  max-width: 17.5rem;
+}
+.s-games .top .right-top {
+  width: 100%;
+  max-width: 75.2rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+}
+.s-games .top .right-top ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  gap: 2.4rem;
+}
+.s-games .top .right-top ul li a img {
+  opacity: 0.5;
+  -webkit-transition: opacity 0.3s;
+  transition: opacity 0.3s;
+}
+.s-games .top .right-top ul li a.active img {
+  opacity: 1;
+}
+.s-games .top .right-top .btn-all-games {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  font-family: "Poppins";
+  font-weight: 600;
+  font-size: 1.6rem;
+  line-height: 2.4rem;
+  color: #00aeff;
+}
+.s-games .top .right-top .btn-all-games img {
+  margin-right: 1rem;
+}
+.s-games .tab-games-content .tab-pane-games {
+  display: none;
+}
+.s-games .tab-games-content .tab-pane-games.active {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 4.7rem 3.2rem;
+  -webkit-animation: fadeUp 0.4s forwards;
+  animation: fadeUp 0.4s forwards;
+}
+.s-games .tab-games-content .tab-pane-games .card-all-games {
+  width: 100%;
+  max-width: 28rem;
+  height: 38.4rem;
+  border: 1px solid #212428;
+  border-radius: 4px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+}
+.s-games .tab-games-content .tab-pane-games .card-all-games span {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  margin-top: 3.8rem;
+}
+.s-games .tab-games-content .tab-pane-games .card-all-games span img {
+  margin-right: 1.3rem;
+}
+
+.s-download {
+  width: 100%;
+  height: 85.2rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background: url(../assets/bg-download.png) no-repeat center center;
+}
+.s-download .container .text-left {
+  padding-top: 13.2rem;
+  width: 39.3rem;
+  height: 36.8rem;
+}
+.s-download .container .text-left h2 {
+  font-family: "Poppins";
+  font-weight: 700;
+  font-size: 3.2rem;
+  color: #fff;
+  margin-block: 3rem;
+}
+.s-download .container .text-left ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 2rem;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+}
+.s-download .container .text-left ul li {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.s-download .container .text-left ul li img {
+  margin-right: 1.6rem;
+}
+.s-download .container .text-left ul li span {
+  font-weight: 400;
+  font-size: 1.8rem;
+  color: #828792;
+}
+.s-download .container .text-left .btn {
+  width: 26.6rem;
+  height: 5.2rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  background: #00aeff;
+  border-radius: 4px;
+  margin-top: 3.9rem;
+  margin-bottom: 4.7rem;
+}
+.s-download .container .text-left .btn img {
+  margin-right: 0.9rem;
+}
+.s-download .container .text-left .info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.s-download .container .text-left .info img {
+  margin-right: 1.8rem;
+}
+.s-download .container .text-left .info span {
+  text-align: inherit;
+}
+.s-download .container .text-left .info span .linha {
+  text-decoration: underline;
+}
+.s-download .container .area-right {
+  position: relative;
+}
+.s-download .container .area-right .image-1 {
+  position: absolute;
+  right: -26rem;
+  top: -27rem;
+  -webkit-animation: float 4s infinite;
+  animation: float 4s infinite;
+}
+.s-download .container .area-right .image-2 {
+  position: absolute;
+  top: 3.4rem;
+  right: -6.1rem;
+  -webkit-animation: float 4.6s infinite;
+  animation: float 4.6s infinite;
+}
+
+.show-modal .modal {
+  opacity: 1;
+  pointer-events: all;
+}
+.show-modal .modal .box {
+  -webkit-transform: translateY(0);
+  transform: translateY(0);
+}
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  opacity: 0;
+  pointer-events: none;
+}
+.modal .overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.554);
+}
+.modal .box {
+  position: relative;
+  z-index: 1;
+  width: 100%;
+  max-width: 69.9rem;
+  height: 60rem;
+  background: url("../assets/bg-modal.png") no-repeat #020203 top left;
+  border-radius: 4px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-transform: translateY(50px);
+  transform: translateY(50px);
+  -webkit-transition: -webkit-transform 0.3s;
+  transition: -webkit-transform 0.3s;
+  transition: transform 0.3s;
+  transition: transform 0.3s, -webkit-transform 0.3s;
+}
+.modal .box .close {
+  position: absolute;
+  top: 2.4rem;
+  right: 2.4rem;
+}
+.modal .box .logo {
+  margin-bottom: 4rem;
+  width: 16.6rem;
+}
+.modal .box form {
+  width: 100%;
+  max-width: 42.6rem;
+}
+.modal .box form .form-group {
+  margin-bottom: 1.6rem;
+}
+.modal .box form .form-group:last-child {
+  margin-bottom: 2.4rem;
+}
+.modal .box form .form-group input[type=text],
+.modal .box form .form-group input[type=password] {
+  width: 100%;
+  height: 4.8rem;
+  border-radius: 4px;
+  border: none;
+  padding: 0px 1.6rem;
+  font-weight: 500;
+  font-size: 1.5rem;
+  line-height: 2.2rem;
+  color: #363842;
+}
+.modal .box form .form-group input[type=text]::-webkit-input-placeholder, .modal .box form .form-group input[type=password]::-webkit-input-placeholder {
+  opacity: 0.6;
+}
+.modal .box form .form-group input[type=text]::-moz-placeholder, .modal .box form .form-group input[type=password]::-moz-placeholder {
+  opacity: 0.6;
+}
+.modal .box form .form-group input[type=text]:-ms-input-placeholder, .modal .box form .form-group input[type=password]:-ms-input-placeholder {
+  opacity: 0.6;
+}
+.modal .box form .form-group input[type=text]::-ms-input-placeholder, .modal .box form .form-group input[type=password]::-ms-input-placeholder {
+  opacity: 0.6;
+}
+.modal .box form .form-group input[type=text]::placeholder,
+.modal .box form .form-group input[type=password]::placeholder {
+  opacity: 0.6;
+}
+.modal .box form .form-group button {
+  width: 100%;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+}
+.modal .box .others-conect {
+  margin-bottom: 3.5rem;
+}
+.modal .box .others-conect p {
+  text-align: center;
+  font-weight: 500;
+  font-size: 1.4rem;
+  line-height: 21px;
+  text-align: center;
+  color: #fff;
+}
+.modal .box .others-conect ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.modal .box .others-conect ul li:not(:first-child) {
+  margin-left: 1.6rem;
+}
+.modal .box .others-conect ul li button {
+  width: 4.8rem;
+  height: 4.8rem;
+  background-color: #fff;
+  border-radius: 4px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+}
+.modal .box .message-usser p {
+  text-align: center;
+  font-weight: 500;
+  font-size: 1.6rem;
+  line-height: 2.4rem;
+  color: #fff;
+  margin-bottom: 1.6rem;
+}
+.modal .box .message-usser a {
+  font-weight: 500;
+  font-size: 1.6rem;
+  line-height: 24px;
+  -webkit-text-decoration-line: underline;
+  text-decoration-line: underline;
+  color: #00aeff;
+  text-align: center;
+  display: block;
+}
+.modal .box .message-usser a:hover {
+  color: #fff;
+}
+
+@-webkit-keyframes fadeUp {
+  from {
+    opacity: 0;
+    -webkit-transform: translateY(20px);
+    transform: translateY(20px);
+  }
+  to {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+  }
+}
+
+@keyframes fadeUp {
+  from {
+    opacity: 0;
+    -webkit-transform: translateY(20px);
+    transform: translateY(20px);
+  }
+  to {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+  }
+}
+@-webkit-keyframes float {
+  0% {
+    -webkit-transform: translateY(0px);
+    transform: translateY(0px);
+  }
+  50% {
+    -webkit-transform: translateY(-20px);
+    transform: translateY(-20px);
+  }
+  100% {
+    -webkit-transform: translateY(0px);
+    transform: translateY(0px);
+  }
+}
+@keyframes float {
+  0% {
+    -webkit-transform: translateY(0px);
+    transform: translateY(0px);
+  }
+  50% {
+    -webkit-transform: translateY(-20px);
+    transform: translateY(-20px);
+  }
+  100% {
+    -webkit-transform: translateY(0px);
+    transform: translateY(0px);
+  }
 }
