--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -5,7 +5,7 @@ header {
   border-bottom: 1.5px solid rgba(255, 255, 255, 0.109);
   display: flex;
   align-items: center;
-  z-index: 2;
+  z-index: 99;
   .container {
     display: flex;
     align-items: center;
@@ -36,9 +36,18 @@ header {
             align-items: center;
             img {
               margin-left: 1.3rem;
+              transition: transform 0.3s;
             }
             span {
               padding-left: 3.4rem;
+            }
+            &.active {
+              span {
+                color: $light-blue;
+              }
+              img {
+                transform: rotate(180deg);
+              }
             }
           }
         }
@@ -53,6 +62,147 @@ header {
         margin-left: 1.6rem;
         img {
           padding-right: 1rem;
+        }
+      }
+    }
+  }
+  .btn-menu {
+    display: none;
+    img {
+      width: 2.8rem;
+      height: 1.8rem;
+    }
+  }
+  @media (max-width: 991px) {
+    .container {
+      .right-container {
+        width: 100%;
+        justify-content: flex-end;
+        margin-right: 8.9rem;
+      }
+      .left-container {
+        nav {
+          display: none;
+        }
+      }
+      .btn-menu {
+        display: block;
+      }
+    }
+  }
+  @media (max-width: 600px) {
+    .container {
+      .right-container {
+        display: none;
+      }
+    }
+  }
+}
+
+.menu {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 4;
+  background: linear-gradient(
+    180deg,
+    #020203 0%,
+    rgba(14, 17, 23, 0.92) 96.35%,
+    rgba(14, 17, 23, 0.9) 100%
+  );
+  backdrop-filter: blur(12px);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  backdrop-filter: blur(54px);
+  width: 100%;
+  padding-top: 9.6rem;
+  opacity: 0;
+  transform: translateY(-100%);
+  transition: all 0.3s;
+  pointer-events: none;
+  &.active {
+    opacity: 1;
+    transform: translateY(0%);
+    pointer-events: all;
+    transition: all 0.3s;
+  }
+  &.esportes {
+    .area-menu {
+      .container {
+        display: grid;
+        grid-template-columns: repeat(5, 1fr);
+        grid-gap: 2.8rem 3.2rem;
+        li {
+          a {
+            width: 17.4rem;
+            height: 23.7rem;
+            .icon {
+              width: 17.4rem;
+              height: 17.9rem;
+            }
+          }
+        }
+      }
+    }
+    .footer-menu {
+      ul {
+        justify-content: center;
+      }
+    }
+  }
+
+  .area-menu {
+    padding-top: 3.8rem;
+    padding-bottom: 5.8rem;
+    .container {
+      display: grid;
+      grid-template-columns: repeat(6, 1fr);
+      grid-gap: 2.8rem 3.2rem;
+      ul {
+        li {
+          a {
+            width: 17.6rem;
+            height: 17.6rem;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
+            .icon {
+              width: 6.9rem;
+              height: 6.4rem;
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              margin-bottom: 8.6px;
+            }
+            span {
+              display: block;
+              text-align: center;
+              font-family: 'Inter';
+              line-height: 120%;
+              color: $gray-100;
+            }
+          }
+        }
+      }
+    }
+  }
+  .footer-menu {
+    background: rgba(21, 23, 27, 0.719);
+    width: 100%;
+    height: 7rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    ul {
+      display: flex;
+      width: 83.2rem;
+      gap: 6.4rem;
+      li {
+        a {
+          display: flex;
+          .icon {
+            margin-right: 1rem;
+          }
         }
       }
     }
