--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -150,18 +150,96 @@
       }
     }
   }
+  @media (max-width: 1200px) {
+    .slide-thumbnail {
+      left: 1%;
+    }
+  }
   @media (max-width: 991px) {
     .slide-principal {
       .swiper-wrapper {
         .swiper-slide {
+          &.slide-02 {
+            .left-content {
+              max-width: 46.2rem;
+            }
+            h2 {
+              font-size: 5.8rem;
+            }
+          }
           .left-content {
-            margin-left: 13.8rem;
+            margin-left: 0;
+            h2 {
+              font-size: 6.4rem;
+            }
+          }
+          .right-content {
+            position: absolute;
+            right: 0;
+            .logo {
+              margin-top: -5.3rem;
+              margin-bottom: 21rem;
+            }
           }
         }
       }
     }
+    .slide-thumbnail {
+      left: 1.5rem;
+      top: initial;
+      bottom: 10.5rem;
+      height: 4.8rem;
+    }
   }
-  @media (max-width: 768px) {
+  @media (max-width: 560px) {
+    .slide-principal {
+      height: 62rem;
+      .swiper-wrapper {
+        .swiper-slide {
+          padding-top: 13.1rem;
+          &.slide-01 {
+            background-position-x: 40%;
+            h2 {
+              max-width: 26rem;
+            }
+          }
+          &.slide-02 {
+            background-position-x: 63%;
+            .left-content {
+              h2 {
+                font-size: 4rem;
+              }
+              p {
+                max-width: 30.5rem;
+                font-size: 1.6rem;
+              }
+            }
+          }
+          &.slide-03 {
+            background-position-x: 60%;
+            .left-content {
+              h2 {
+                max-width: 31rem;
+              }
+              p {
+                max-width: 26rem;
+              }
+            }
+          }
+          .left-content {
+            h2 {
+              font-size: 4rem;
+            }
+          }
+          .right-content {
+            display: none;
+          }
+        }
+      }
+    }
+    .slide-thumbnail {
+      bottom: 65px;
+    }
   }
 }
 
@@ -264,6 +342,77 @@
       }
     }
   }
+  @media (max-width: 991px) {
+    .tab-games-content {
+      .tab-pane-games {
+        &.active {
+          .game-card {
+            .image {
+              height: 21.3rem;
+            }
+          }
+        }
+      }
+    }
+  }
+  @media (max-width: 768px) {
+    .tab-games-content {
+      .tab-pane-games {
+        &.active {
+          grid-template-columns: repeat(3, 1fr);
+          grid-gap: 4.1rem 3.2rem;
+          .game-card {
+            .image {
+              height: 21.3rem;
+            }
+          }
+        }
+        .card-all-games {
+          height: 30.4rem;
+        }
+      }
+    }
+  }
+  @media (max-width: 560px) {
+    .top {
+      margin-bottom: 5.7rem;
+      .left-top {
+        span {
+          display: none;
+        }
+        h2 {
+          max-width: 15.3rem;
+          font-size: 2.8rem;
+        }
+      }
+      .right-top {
+        justify-content: flex-end;
+        margin-top: 3rem;
+        .js-nav-games {
+          display: none;
+          a {
+            font-size: 1.4rem;
+          }
+        }
+      }
+    }
+    .tab-games-content {
+      .tab-pane-games {
+        &.active {
+          grid-template-columns: repeat(2, 1fr);
+          grid-gap: 1.7rem 3.2rem;
+          .game-card {
+            .image {
+              height: 21.3rem;
+            }
+          }
+        }
+        .card-all-games {
+          height: 30.4rem;
+        }
+      }
+    }
+  }
 }
 .s-download {
   width: 100%;
@@ -340,6 +489,53 @@
         top: 3.4rem;
         right: -6.1rem;
         animation: float 4.6s infinite;
+      }
+    }
+  }
+  @media (max-width: 991px) {
+    .container {
+      .area-right {
+        width: 90.7rem;
+        height: 51.9rem;
+        .image-1 {
+          width: 89.7rem;
+          height: 50.6rem;
+        }
+        .image-2 {
+          width: 57.6rem;
+          height: 30.6rem;
+        }
+      }
+    }
+    @media (max-width: 375px) {
+      background-position-x: 10%;
+      overflow-y: hidden;
+      .container {
+        position: relative;
+        .text-left {
+          padding-top: 6.3rem;
+        }
+        .area-right {
+          margin-top: 40rem;
+          .image-1 {
+            position: relative;
+            width: 52.8rem;
+            height: 29.8rem;
+            img {
+              position: absolute;
+              left: -27rem;
+            }
+          }
+          .image-2 {
+            position: relative;
+            width: 33.6rem;
+            height: 18.9rem;
+            img {
+              position: absolute;
+              top: -48rem;
+            }
+          }
+        }
       }
     }
   }
