--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -150,6 +150,48 @@
       }
     }
   }
+  .swiper-progress-bar {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    display: block;
+    z-index: 3;
+    &.active {
+      .slide-progress-bar {
+        opacity: 1;
+      }
+    }
+    &.animate {
+      .slide-progress-bar {
+        &:after {
+          width: 100%;
+          transition: width 3.5s linear;
+        }
+      }
+    }
+    .slide-progress-bar {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      width: auto;
+      height: 3px;
+      opacity: 0;
+      display: block;
+      &:after {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+
+        background-color: $light-blue;
+        height: 100%;
+        width: 0;
+        transition: width 0.1s linear;
+      }
+    }
+  }
   @media (max-width: 1200px) {
     .slide-thumbnail {
       left: 1%;
@@ -343,6 +385,18 @@
     }
   }
   @media (max-width: 991px) {
+    .top {
+      .right-top {
+        justify-content: flex-end;
+        margin-top: 3rem;
+        .js-nav-games {
+          display: none;
+          a {
+            font-size: 1.4rem;
+          }
+        }
+      }
+    }
     .tab-games-content {
       .tab-pane-games {
         &.active {
@@ -416,7 +470,7 @@
 }
 .s-download {
   width: 100%;
-  height: 85.2rem;
+  height: 89.2rem;
   display: flex;
   background: url(../assets/bg-download.png) no-repeat center center;
 
